@@ -12,7 +12,7 @@ public class BeanCopyUtil {
     public static <T> T copyObject(Object source, Class<T> target) {
         T temp = null;
         try {
-            temp = target.newInstance();
+            temp = target.getDeclaredConstructor().newInstance();
             if (null != source) {
                 org.springframework.beans.BeanUtils.copyProperties(source, temp);
             }
@@ -24,7 +24,7 @@ public class BeanCopyUtil {
 
     public static <T, S> List<T> copyList(List<S> source, Class<T> target) {
         List<T> list = new ArrayList<>();
-        if (null != source && source.size() > 0) {
+        if (null != source && !source.isEmpty()) {
             for (Object obj : source) {
                 list.add(BeanCopyUtil.copyObject(obj, target));
             }
